kog         2005/10/16 07:27:04 UTC	(20051016-2937)
  Log:
  added memoserv ignore tables
  

  Changes:	Modified:
  +14 -0	trunk/SQL/atheme_init.mysql (File Modified) 
  +8 -0		trunk/SQL/atheme_init.sql (File Modified) 


kog         2005/10/16 07:06:22 UTC	(20051016-2935)
  Log:
  flatfile now stores memoserv ignores (MI user target)
  

  Changes:	Modified:
  +25 -0	trunk/backend/flatfile.c (File Modified) 


kog         2005/10/16 07:03:56 UTC	(20051016-2933)
  Log:
  ignore checks proper buffer length (-1),
  forward and send now look at myuser->name and not origin for ignores
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/forward.c (File Modified) 
  +1 -1		trunk/modules/memoserv/ignore.c (File Modified) 
  +2 -2		trunk/modules/memoserv/send.c (File Modified) 


kog         2005/10/16 06:27:47 UTC	(20051016-2931)
  Log:
  realname for helpserv now says help services
  

  Changes:	Modified:
  +1 -1		trunk/dist/example.conf (File Modified) 
  +1 -1		trunk/dist/example.userserv.conf (File Modified) 


nenolod     2005/10/16 06:00:27 UTC	(20051016-2929)
  Log:
  Add win32 setup stuff.

  Changes:	Modified:
  +0 -0		trunk/win32/Atheme.bmp (File Added) 
  +0 -0		trunk/win32/Atheme.ico (File Added) 
  +32 -0	trunk/win32/setup.iss (File Added) 


kog         2005/10/16 05:19:25 UTC	(20051016-2927)
  Log:
  help files for memoserv
  

  Changes:	Modified:
  + -		trunk/help/memoserv/ (File Added) 
  +16 -0	trunk/help/memoserv/delete (File Added) 
  +12 -0	trunk/help/memoserv/forward (File Added) 
  +16 -0	trunk/help/memoserv/ignore (File Added) 
  +12 -0	trunk/help/memoserv/list (File Added) 
  +12 -0	trunk/help/memoserv/read (File Added) 
  +15 -0	trunk/help/memoserv/send (File Added) 


nenolod     2005/10/16 05:08:16 UTC	(20051016-2925)
  Log:
  windows is stupid and wont delete something that doesn't exist

  Changes:	Modified:
  +0 -1		trunk/libatheme/Makefile.win32 (File Modified) 


kog         2005/10/16 05:07:06 UTC	(20051016-2923)
  Log: